--- a/src/app/services/page.module.css
+++ b/src/app/services/page.module.css
@@ -5,7 +5,7 @@
 
 .hero {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 40vh;
   min-height: 300px;
   background-image: url('/hero1.png');
@@ -49,12 +49,12 @@
 .servicesContainer {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
 }
 
 .serviceBlock {
   position: relative;
-  width: 100vw;
+  width: 100%;
   min-height: 80vh;
   display: flex;
   align-items: center;
